Injection statique réalisée dans Presentation.java