@@ -1,21 +1,34 @@
 package net.chaimaa.pres;
 
 import net.chaimaa.dao.IDao;
-import net.chaimaa.metier.MetierImpl;
+import net.chaimaa.metier.IMetier;
 
 import java.io.File;
 import java.io.FileNotFoundException;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.Scanner;
 
 public class Pres2 {
-    public static void main(String[] args) throws FileNotFoundException, ClassNotFoundException, InstantiationException, IllegalAccessException {
+    // FileNotFoundException, ClassNotFoundException, InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException
+    public static void main(String[] args) throws Exception  {
 
             Scanner scanner = new Scanner(new File("config.txt"));
 
             String daoClassName = scanner.nextLine();
             Class cDao = Class.forName(daoClassName);
-            IDao dao =(IDao) cDao.newInstance();
-            System.out.println(dao.getData());
+            IDao d =(IDao) cDao.newInstance();
+
+
+            String metierClassName = scanner.nextLine();
+            Class cMetier = Class.forName(daoClassName);
+            IMetier metier = (IMetier)cMetier.getConstructor(IDao.class).newInstance(d);
+            //IMetier metier = (IMetier) cMetier.getConstructor().newInstance();
+            //Method setDao = cMetier.getDeclaredMethod("setDao", IDao.class);
+            //setDao.invoke(metier,d);
+
+            System.out.println("RES="+metier.calcul());
+
 
 
     }
